--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
     padding:10px;
     margin:10px;
     background:black;
+    border-radius: 20px;
     margin:auto;
     max-width:20vw;
   }
